Fix HTML structure and update styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Valentine Week Special 💖</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <style>
 
 
@@ -211,3 +211,4 @@
   </audio>
 </body>
 </html>
+
