--- a/rose.html
+++ b/rose.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rose Day 🌹</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <style>
     /* Animated background gradient */
     body {
@@ -158,3 +158,4 @@
   </script>
 </body>
 </html>
+
