Remove duplicate HTML structure in rose.html

--- a/rose.html
+++ b/rose.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Rose Day 🌹</title>
-  <link rel="stylesheet" href="css/style.css">
   <style>
     /* Animated background gradient */
     body {
@@ -117,7 +116,7 @@
 
   <!-- Background Music -->
   <audio autoplay loop>
-    <source src="https://Dilip3399.github.io/valentine-week/1.mpeg" type="audio/mpeg">
+    <source src="https://dilip3399.github.io/valentine-week/1.mpeg" type="audio/mpeg">
   </audio>
 
   <!-- Emoji generator -->
@@ -158,4 +157,3 @@
   </script>
 </body>
 </html>
-
