--- a/rose.html
+++ b/rose.html
@@ -106,13 +106,42 @@
       0% { transform: translateY(-20px) rotate(0deg); opacity: 1; }
       100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
     }
+
+    /* Buttons */
+    .btn {
+      display: inline-block;
+      padding: 12px 24px;
+      margin: 15px;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
+      transition: background 0.3s ease;
+    }
+    .home-btn {
+      background: #666;
+      color: white;
+    }
+    .home-btn:hover {
+      background: #444;
+    }
+    .next-btn {
+      background: #ff4d6d;
+      color: white;
+    }
+    .next-btn:hover {
+      background: #ff1e56;
+    }
   </style>
 </head>
 <body>
   <h1>🌹 Happy Rose Day 🌹</h1>
   <div class="date">Saturday, 07 February 2026</div>
   <div class="quote">"A rose speaks of love silently, in a language known only to the heart." — For you 💙</div>
-  <br><br><a href="index.html">⬅ Back to Home</a>
+  
+  <!-- Navigation Buttons -->
+  <br><br>
+  <a href="index.html" class="btn home-btn">⬅ Back to Home</a>
+  <a href="propose.html" class="btn next-btn">Next Day ➡</a>
 
   <!-- Background Music -->
   <audio autoplay loop>
@@ -157,4 +186,3 @@
   </script>
 </body>
 </html>
-
