Add navigation buttons and update styles
Added navigation buttons for previous day and home.

--- a/valentine.html
+++ b/valentine.html
@@ -57,13 +57,29 @@
       animation-delay: 1s;
     }
 
-    a {
-      color: #ff4d6d;
-      text-decoration: none;
+    /* Buttons */
+    .btn {
+      display: inline-block;
+      padding: 12px 24px;
+      margin: 15px;
+      border-radius: 8px;
       font-weight: bold;
+      text-decoration: none;
+      transition: background 0.3s ease;
     }
-    a:hover {
-      text-decoration: underline;
+    .home-btn {
+      background: #666;
+      color: white;
+    }
+    .home-btn:hover {
+      background: #444;
+    }
+    .prev-btn {
+      background: #ff4d6d;
+      color: white;
+    }
+    .prev-btn:hover {
+      background: #ff1e56;
     }
 
     .heart {
@@ -128,7 +144,11 @@
   <h1>❤️ Happy Valentine’s Day ❤️</h1>
   <div class="date">Saturday, 14 February 2026</div>
   <div class="quote">"Love is composed of a single soul inhabiting two bodies." — For you 💙</div>
-  <br><br><a href="index.html">⬅ Back to Home</a>
+  
+  <!-- Navigation Buttons -->
+  <br><br>
+  <a href="kiss.html" class="btn prev-btn">⬅ Previous Day</a>
+  <a href="index.html" class="btn home-btn">🏠 Home</a>
 
   <!-- Background Music -->
   <audio autoplay loop>
